@startuml

title __ENTITIES's Class Diagram__\n

  namespace org.stroganov {
    namespace entities {
      class org.stroganov.entities.Author {
          ~ authorName : String
          ~ numberID : int
          + Author()
      }
    }
  }
  

  namespace org.stroganov {
    namespace entities {
      class org.stroganov.entities.Book {
          - name : String
          - numberISBN : String
          - pagesNumber : int
          - yearPublishing : int
          + Book()
          + getAuthorName()
          + getName()
          + getNumberISBN()
          + getPagesNumber()
          + getYearPublishing()
      }
    }
  }
  

  namespace org.stroganov {
    namespace entities {
      class org.stroganov.entities.BookMark {
          ~ bookPageNumber : int
          + BookMark()
      }
    }
  }
  

  namespace org.stroganov {
    namespace entities {
      class org.stroganov.entities.User {
          - fullName : String
          - isAdmin : boolean
          - isBlocked : boolean
          - login : String
          - numberID : int
          - passcodeHash : String
          + User()
          + getFullName()
          + getLogin()
          + getNumberID()
          + getPasscodeHash()
          + isAdmin()
          + isBlocked()
          + setAdmin()
          + setBlocked()
          + setPasscodeHash()
          + toString()
      }
    }
  }
  

  org.stroganov.entities.Book o-- org.stroganov.entities.Author : authorName
  org.stroganov.entities.BookMark o-- org.stroganov.entities.Book : book
  org.stroganov.entities.BookMark o-- org.stroganov.entities.User : user


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
